# EC-DDP_CartPendulum

./: README.md  hello.py  pyproject.toml
ec_ddp/: __main__.py  ec_ddp.py  model.py
src/ec_ddp/: __main__.py  ec-ddp_globally_constant.py  ec-ddp_locally_affine.py  ec_ddp_solver copy.py  ec_ddp_solver.py  model.py
